CSS fixes on home page's "latest" posts section where the gradient at bottom of tile appears undesirably at smaller screen sizes; CSS fixes on "services" section, committee blog tile with the overflowing excerpt texts

--- a/css/main.sass
+++ b/css/main.sass
@@ -336,7 +336,6 @@ h4
   color: $mid-grey
 
 section#latest
-  /*height: 100%;
   display: -webkit-box
 
   /* OLD - iOS 6-, Safari 3.1-6, BB7 */
@@ -683,7 +682,7 @@ section#services div.column div.service.hover:hover
 
 section#services div.column div.service
   flex: 1
-  min-height: 400px
+  min-height: 300px
   border-top: 7px solid $brand-color
   margin: 10px
   border-bottom: 1px solid #dfdfdf
